# test

./: .gitignore  CMakeLists.txt  README-zh.md  README.md  WINGET_SETUP.md  build.bat  build.sh  mingw-w64-toolchain.cmake  winget-submit.sh  xmake.lua
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json
.github/workflows/: build.yml  release.yml  signpath-sign.yml  tag-release.yml
i18n/: README_de.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_zh-CN.md  README_zh-Hant.md
include/: async_update_checker.h  audio_player.h  cli.h  color.h  config.h  dialog_language.h  dialog_procedure.h  drag_scale.h  drawing.h  font.h  hotkey.h  language.h  log.h  markdown_parser.h  media.h  notification.h  pomodoro.h  shortcut_checker.h  startup.h  timer.h  timer_events.h  tray.h  tray_events.h  tray_menu.h  update_checker.h  window.h  window_events.h  window_procedure.h
resource/: about_dialog.rc  app.manifest  catime.rc  color_dialog.rc  countdown_dialog.rc  error_dialog.rc  font_license_dialog.rc  help_dialog.rc  hotkey_dialog.rc  languages.rc  no_update_dialog.rc  notification_dialog.rc  pomodoro_combo_dialog.rc  pomodoro_loop_dialog.rc  pomodoro_time_dialog.rc  resource.h  resource.rc  shortcut_dialog.rc  startup_dialog.rc  update_dialog.rc  update_exit_dialog.rc  website_dialog.rc
resource/languages/: de.ini  en.ini  es.ini  fr.ini  ja.ini  ko.ini  pt.ini  ru.ini  zh-Hant.ini  zh_CN.ini
src/: async_update_checker.c  audio_player.c  cli.c  color.c  config.c  dialog_language.c  dialog_procedure.c  drag_scale.c  drawing.c  font.c  hotkey.c  language.c  log.c  main.c  markdown_parser.c  media.c  notification.c  shortcut_checker.c  startup.c  timer.c  timer_events.c  tray.c  tray_events.c  tray_menu.c  update_checker.c  window.c  window_events.c  window_procedure.c
winget template/: VladElaina.Catime.installer.yaml  VladElaina.Catime.locale.en-US.yaml  VladElaina.Catime.locale.zh-CN.yaml  VladElaina.Catime.yaml
